<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/darkgrey">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Title-->
        <TextView
            android:id="@+id/thirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/app_name"
            android:textColor="@color/cyan"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <!--Help button-->
        <ImageButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_help"
            android:contentDescription="@string/rules"
            android:background="@color/darkgrey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Amount of rounds-->
        <TextView
            android:id="@+id/roundNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/roundNumber"
            android:textColor="@color/cyan"/>

        <!--Throws left-->
        <TextView
            android:id="@+id/throwsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/throwsLeft"
            android:textColor="@color/cyan"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--Dice 1-->
        <ImageButton
            android:id="@+id/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white1"
            android:padding="15dp"
            android:contentDescription="@string/dice1"
            android:background="@color/darkgrey"/>

        <!--Dice 2-->
        <ImageButton
            android:id="@+id/dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white2"
            android:padding="15dp"
            android:contentDescription="@string/dice2"
            android:background="@color/darkgrey"/>

        <!--Dice 3-->
        <ImageButton
            android:id="@+id/dice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white3"
            android:padding="15dp"
            android:contentDescription="@string/dice2"
            android:background="@color/darkgrey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--Dice 4-->
        <ImageButton
            android:id="@+id/dice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white4"
            android:padding="15dp"
            android:contentDescription="@string/dice4"
            android:background="@color/darkgrey"/>

        <!--Dice 5-->
        <ImageButton
            android:id="@+id/dice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white5"
            android:padding="15dp"
            android:contentDescription="@string/dice5"
            android:background="@color/darkgrey"/>

        <!--Dice 6-->
        <ImageButton
            android:id="@+id/dice6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white6"
            android:padding="15dp"
            android:contentDescription="@string/dice6"
            android:background="@color/darkgrey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <!--Drop-down menu-->
        <Spinner
            android:id="@+id/combinations1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/chooseTypeOfPoints"
            android:backgroundTint="@color/cyan"/>

        <!--Throw button-->
        <Button
            android:id="@+id/throwDice"
            android:theme="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/throwDice"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <!--Get result button-->
        <Button
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="18sp"
            android:layout_margin="15dp"
            android:theme="@style/AppTheme.Button"
            android:padding="15dp"
            />

        <!--Next round button-->
        <Button
            android:id="@+id/nextRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextRound"
            android:layout_margin="15dp"
            android:theme="@style/AppTheme.Button"
            android:textSize="18sp"
            android:visibility="invisible"
            android:padding="15dp"/>
    </LinearLayout>


    <!--Points per round-->
    <TextView
        android:id="@+id/pointsThisRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="22sp"
        android:text="@string/pointsThisRound"
        android:visibility="invisible"
        android:textColor="@color/cyan"/>
</LinearLayout>