<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/darkgrey">

    <!--Title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/cyan"/>

    <!--Description-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/description"
        android:textColor="@color/cyan"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--Dice 1-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white1"
            android:padding="15dp"
            android:contentDescription="@string/dice1"
            android:background="@color/darkgrey"/>

        <!--Dice 2-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white2"
            android:padding="15dp"
            android:contentDescription="@string/dice2"
            android:background="@color/darkgrey"/>

        <!--Dice 3-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white3"
            android:padding="15dp"
            android:contentDescription="@string/dice2"
            android:background="@color/darkgrey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--Dice 4-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white4"
            android:padding="15dp"
            android:contentDescription="@string/dice4"
            android:background="@color/darkgrey"/>

        <!--Dice 5-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white5"
            android:padding="15dp"
            android:contentDescription="@string/dice5"
            android:background="@color/darkgrey"/>

        <!--Dice 6-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white6"
            android:padding="15dp"
            android:contentDescription="@string/dice6"
            android:background="@color/darkgrey"/>
    </LinearLayout>

    <!--Start game button-->
    <Button
        android:id="@+id/startGame"
        android:theme="@style/AppTheme.Button"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:textSize="18sp"
        android:padding="15dp" />

</LinearLayout>